# homelab-monitor

./: .gitignore  README.md
docs/: HARDWARE.md  PROTOCOL.md
firmware/: platformio.ini
firmware/include/: README
firmware/lib/: README
firmware/lib/TFT_eSPI_Config/: User_Setup.h
firmware/src/: main.cpp
firmware/test/: README
scripts/: homelab-monitor.service  install.sh
server-client/: pyproject.toml
server-client/config/: config.example.yaml
server-client/src/: monitor.py
server-client/tests/: test_serial.py
